syntax = "proto3";

package spells;

service Apprentice {
  rpc CastSpell(SpellRequest) returns (SpellResponse);
  rpc GetStatus(StatusRequest) returns (StatusResponse);
  rpc GetChatHistory(ChatHistoryRequest) returns (ChatHistoryResponse);
  rpc Banish(BanishRequest) returns (BanishResponse);
}

message SpellRequest {
  string incantation = 1; // The prompt to send to Claude
  string spell_id = 2;    // Unique ID for tracking this spell
}

message SpellResponse {
  string spell_id = 1;
  string result = 2;      // Claude's response
  bool success = 3;
  string error = 4;       // Error message if any
}

message StatusRequest {}

message StatusResponse {
  string apprentice_name = 1;
  string state = 2;       // "idle", "casting", "error"
  string last_spell_time = 3;
}

message ChatHistoryRequest {
  int32 lines = 1;        // Number of recent lines to retrieve
}

message ChatHistoryResponse {
  repeated string history = 1;  // Chat history lines
}

message BanishRequest {
  string reason = 1;
}

message BanishResponse {
  bool success = 1;
  string message = 2;
}