use std::collections::HashMap;
use uuid::Uuid;

#[cfg(test)]
mod sorcerer_tests {
    use super::*;

    #[test]
    fn test_port_assignment_logic() {
        // Test the port assignment logic that would be used in the real system
        let mut next_port = 50100u16;

        let port1 = next_port;
        next_port += 1;

        let port2 = next_port;

        assert_eq!(port1, 50100);
        assert_eq!(port2, 50101);
        assert_ne!(port1, port2);
    }

    #[test]
    fn test_agent_name_extraction() {
        // Test the logic that extracts agent names from container names
        let container_name = "/agent-test_name";
        let agent_name = container_name.strip_prefix("/agent-").unwrap();

        assert_eq!(agent_name, "test_name");
    }

    #[test]
    fn test_agent_name_extraction_various_formats() {
        let test_cases = vec![
            ("/agent-alice", "alice"),
            ("/agent-bob_123", "bob_123"),
            ("/agent-test-name", "test-name"),
            ("/agent-a", "a"),
        ];

        for (container_name, expected_name) in test_cases {
            let agent_name = container_name.strip_prefix("/agent-").unwrap();
            assert_eq!(agent_name, expected_name);
        }
    }

    #[test]
    fn test_grpc_port_env_parsing() {
        // Test the environment variable parsing logic for GRPC_PORT
        let env_vars = vec!["GRPC_PORT=50051", "GRPC_PORT=50100", "GRPC_PORT=65535"];

        for env_var in env_vars {
            let port = env_var
                .strip_prefix("GRPC_PORT=")
                .and_then(|p| p.parse::<u16>().ok())
                .unwrap_or(50051);

            assert!(port >= 50051);
        }
    }

    #[test]
    fn test_grpc_port_env_parsing_invalid() {
        // Test invalid port parsing falls back to default
        let invalid_env_vars = vec!["GRPC_PORT=invalid", "GRPC_PORT=", "GRPC_PORT=99999"];

        for env_var in invalid_env_vars {
            let port = env_var
                .strip_prefix("GRPC_PORT=")
                .and_then(|p| p.parse::<u16>().ok())
                .unwrap_or(50051);

            // Should fall back to default
            assert_eq!(port, 50051);
        }
    }

    #[test]
    fn test_spell_id_generation() {
        let spell_id = Uuid::new_v4().to_string();

        // UUID should be 36 characters with 4 dashes
        assert_eq!(spell_id.len(), 36);
        assert_eq!(spell_id.matches('-').count(), 4);

        // Should be different each time
        let spell_id2 = Uuid::new_v4().to_string();
        assert_ne!(spell_id, spell_id2);
    }

    #[test]
    fn test_container_name_format() {
        // Test the container naming format used in create_agent
        let agent_name = "test_agent";
        let container_name = format!("agent-{agent_name}");

        assert_eq!(container_name, "agent-test_agent");
        assert!(container_name.starts_with("agent-"));
    }

    #[test]
    fn test_grpc_address_format() {
        // Test the gRPC address format used to connect to agents
        let port = 50051u16;
        let addr = format!("http://127.0.0.1:{port}");

        assert_eq!(addr, "http://127.0.0.1:50051");
        assert!(addr.starts_with("http://127.0.0.1:"));
    }

    #[test]
    fn test_environment_variable_format() {
        // Test the environment variable format used in container creation
        let agent_name = "test_name";
        let port = 50051u16;

        let env_vars = [
            format!("APPRENTICE_NAME={agent_name}"),
            format!("GRPC_PORT={port}"),
        ];

        assert_eq!(env_vars[0], "APPRENTICE_NAME=test_name");
        assert_eq!(env_vars[1], "GRPC_PORT=50051");
    }

    #[test]
    fn test_agent_existence_check() {
        // Test the logic for checking if an agent already exists
        let mut agents = HashMap::new();
        let agent_name = "test_agent";

        // Initially should not exist
        assert!(!agents.contains_key(agent_name));

        // Add agent
        agents.insert(agent_name.to_string(), "dummy_value".to_string());

        // Now should exist
        assert!(agents.contains_key(agent_name));
    }

    #[test]
    fn test_port_conflict_avoidance() {
        // Test the port conflict avoidance logic
        let mut next_port = 50100u16;
        let existing_port = 50102u16;

        // If discovered port is >= next_port, update next_port
        if existing_port >= next_port {
            next_port = existing_port + 1;
        }

        assert_eq!(next_port, 50103);

        // Test case where existing port is less than next_port
        let mut next_port = 50200u16;
        let existing_port = 50100u16;

        if existing_port >= next_port {
            next_port = existing_port + 1;
        }

        // Should remain unchanged
        assert_eq!(next_port, 50200);
    }

    #[test]
    fn test_container_state_checking() {
        // Test the container state checking logic
        let valid_states = vec!["running", "stopped", "paused", "exited"];

        for state in valid_states {
            // Test that we can handle various container states
            let is_running = state == "running";

            if state == "running" {
                assert!(is_running);
            } else {
                assert!(!is_running);
            }
        }
    }

    #[test]
    fn test_agent_removal_logic() {
        // Test the agent removal logic used in remove_agent
        let mut agents = HashMap::new();
        let agent_name = "test_agent";

        // Add agent
        agents.insert(agent_name.to_string(), "dummy_value".to_string());

        assert!(agents.contains_key(agent_name));

        // Remove agent
        let removed_agent = agents.remove(agent_name);

        assert!(removed_agent.is_some());
        assert!(!agents.contains_key(agent_name));

        // Try to remove non-existent agent
        let non_existent = agents.remove("non_existent");
        assert!(non_existent.is_none());
    }

    #[test]
    fn test_spell_validation() {
        // Test spell request validation logic
        let valid_incantations = vec![
            "Hello, world!",
            "What is the meaning of life?",
            "Help me write some code",
            "", // Empty incantation should be valid
        ];

        for incantation in valid_incantations {
            // Validate incantation can be processed
            // Verify it doesn't contain null bytes (would cause issues)
            assert!(!incantation.contains('\0'));

            // Generate spell ID for this incantation
            let spell_id = Uuid::new_v4().to_string();
            assert!(!spell_id.is_empty());
            assert_eq!(spell_id.len(), 36); // Standard UUID length

            // Verify spell can be constructed with incantation
            let spell_request =
                format!("{{\"id\": \"{spell_id}\", \"incantation\": \"{incantation}\"}}");
            assert!(spell_request.contains(&spell_id));
            assert!(spell_request.contains(incantation));
        }
    }

    #[test]
    fn test_chat_history_line_limit() {
        // Test the chat history line limiting logic
        let default_lines = 4usize;
        let custom_lines = 10usize;

        assert_eq!(default_lines, 4);
        assert_eq!(custom_lines, 10);

        // Test that we can handle different line counts
        let line_counts = vec![0, 1, 4, 10, 100, 1000];

        for line_count in line_counts {
            assert!(line_count >= 0);
        }
    }

    #[test]
    fn test_kill_reason_formats() {
        // Test different kill reason formats
        let reasons = vec![
            "Sorcerer's command",
            "Apprentice requested shutdown",
            "System maintenance",
            "Resource cleanup",
            "",
        ];

        for reason in reasons {
            // Verify reason can be processed
            // Verify it doesn't contain null bytes
            assert!(!reason.contains('\0'));
            // Verify it can be used in logging format
            let log_msg = format!("Killing agent: {reason}");
            assert!(log_msg.starts_with("Killing agent: "));
        }
    }

    #[test]
    fn test_status_response_states() {
        // Test all valid agent states
        let valid_states = vec!["idle", "casting", "error"];

        for state in &valid_states {
            assert!(valid_states.contains(state));
        }
    }
}
